<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:id="@+id/txtAppTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:textSize="30sp"
                    android:layout_marginStart="24dp" android:text="@string/appTitle"/>
            <TextView
                    android:text="@string/appDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txtAppDescription"
                    android:layout_marginTop="24dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp" android:textSize="18sp"
                    android:textAlignment="viewStart"/>
            <TextView
                    android:text="@string/Nishino"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txtNishino"
                    android:textSize="18sp"
                    android:layout_marginTop="28dp" android:layout_marginStart="24dp" android:autoLink="email"
                    android:textColorLink="@color/azulSenac"/>
            <TextView
                    android:text="@string/Yamauchi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txtYamauchi"
                    android:textSize="18sp"
                    android:layout_marginStart="24dp" android:layout_marginTop="16dp" android:autoLink="email"
                    android:textColorLink="@color/azulSenac"/>
            <TextView
                    android:text="@string/Barao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txtBarao"
                    android:textSize="18sp"
                    android:layout_marginStart="24dp" android:layout_marginTop="16dp" android:autoLink="email"
                    android:textColorLink="@color/azulSenac"/>
            <TextView
                    android:text="@string/adSenac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/txtAdSenac"
                    android:layout_marginStart="24dp"
                    android:textSize="18sp" android:layout_marginTop="28dp"/>
            <ImageButton
                    android:layout_width="164dp"
                    android:layout_height="96dp" app:srcCompat="@drawable/logo_senac" android:id="@+id/imgbtnAdSenac"
                    android:scaleType="fitCenter"
                    style="@android:style/Widget.ImageButton" android:backgroundTint="#00FFFFFF"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp" android:contentDescription="@string/senacLogoDesc"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>