<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CartActivity">

    <TextView
            android:text="@string/notifyEmptyCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtEmptyCart"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="24dp"
            android:textAlignment="textStart" android:textSize="24sp"/>
    <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintBottom_toTopOf="@+id/btnFinish" android:layout_marginBottom="78dp"
            app:layout_constraintVertical_bias="1.0">

        <LinearLayout
                android:id="@+id/cartContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
        </LinearLayout>
    </ScrollView>
    <Button
            android:id="@+id/btnFinish"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="17dp"
            android:text="@string/btnFinishPurchase"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/cartTotalCostLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtTotal"
            app:layout_constraintBottom_toTopOf="@+id/btnFinish" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp" android:layout_marginStart="32dp" android:textSize="28sp"/>
    <TextView
            android:text="@string/cartTotalCostPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/txtTotalPrice"
            app:layout_constraintBottom_toTopOf="@+id/btnFinish" app:layout_constraintEnd_toEndOf="parent"
            android:textSize="28sp" android:layout_marginEnd="32dp" android:layout_marginBottom="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>