<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"

                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/cardViewProduct"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:layout_marginLeft="20dp"
                                                   android:layout_marginTop="5dp"
                                                   android:layout_marginRight="20dp"
                                                   android:layout_marginBottom="20dp"
                                                   app:cardElevation="10dp"
                                                   app:cardUseCompatPadding="true" app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imgProduct"
                android:layout_width="wrap_content"
                app:srcCompat="@drawable/bala_placeholder"
                tools:srcCompat="@drawable/bala_placeholder" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" android:layout_height="115dp"
                android:contentDescription="@string/productImageContentDescription"/>
        <TextView
                android:id="@+id/txtProductPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/productPricePlaceholder" android:textColor="?attr/colorPrimary"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/txtProductName" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"/>
        <TextView
                android:id="@+id/txtProductName"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:text="@string/productNamePlaceholder"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/imgProduct"
                android:layout_marginTop="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>