<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/cardViewCart"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:layout_marginLeft="20dp"
                                                   android:layout_marginTop="5dp"
                                                   android:layout_marginRight="20dp"
                                                   android:layout_marginBottom="20dp"
                                                   app:cardElevation="10dp"
                                                   app:cardUseCompatPadding="true">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/imgCartProduct"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/bala_placeholder"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/txtCartProductName"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="32dp"
                android:contentDescription="@string/productImageContentDescription"/>
        <TextView
                android:id="@+id/txtCartProductName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/productNamePlaceholder"
                app:layout_constraintStart_toEndOf="@+id/imgCartProduct" android:layout_marginStart="14dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.151"
                android:layout_marginEnd="16dp" android:textSize="18sp"/>
        <TextView
                android:id="@+id/txtCartProductPrice"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:text="@string/productPricePlaceholder"
                app:layout_constraintStart_toEndOf="@+id/btnIncrementQuantity"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@+id/txtCartProductName" android:layout_marginStart="16dp"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/imgCartProduct"/>
        <TextView
                android:text="@string/productQuantityPlaceholder"
                android:layout_width="30dp"
                android:layout_height="30dp" android:id="@+id/txtCartProductQuantity"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@+id/txtCartProductName" android:layout_marginTop="8dp"
                android:textAlignment="center" app:layout_constraintStart_toEndOf="@+id/btnDecrementQuantity"
                android:layout_marginStart="2dp" app:layout_constraintBottom_toBottomOf="@+id/imgCartProduct"/>
        <Button
                android:layout_width="30dp"
                android:layout_height="30dp" android:id="@+id/btnIncrementQuantity"
                app:layout_constraintStart_toEndOf="@+id/txtCartProductQuantity"
                app:layout_constraintTop_toBottomOf="@+id/txtCartProductName" android:layout_marginStart="2dp"
                android:insetTop="0dp" android:insetBottom="0dp"
                android:textSize="12sp" app:icon="@drawable/noun_plus_1809810" app:iconSize="20sp"
                app:iconGravity="textStart" app:iconPadding="0dp"
                android:layout_marginTop="8dp" app:layout_constraintBottom_toBottomOf="@+id/imgCartProduct"/>
        <Button
                android:layout_width="30dp"
                android:layout_height="30dp" android:id="@+id/btnDecrementQuantity"
                app:layout_constraintStart_toEndOf="@+id/imgCartProduct"
                app:layout_constraintTop_toBottomOf="@+id/txtCartProductName" android:layout_marginStart="14dp"
                android:layout_marginTop="8dp" android:insetTop="0dp" android:insetBottom="0dp"
                android:textSize="12sp" app:iconSize="20sp"
                app:iconPadding="0dp" app:iconGravity="textStart"
                app:icon="@drawable/noun_minus_1756297" app:layout_constraintBottom_toBottomOf="@+id/imgCartProduct"
        />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>